[#6] kubernetes 환경 배포 준비